2014-06-15  Martin Maechler  <maechler@stat.math.ethz.ch>

	* DESCRIPTION (Version): 1.1-4, released to CRAN
	* src/dsyMatrix.c (dsyMatrix_matrix_mm): fix crossprod(<vec>, <dsyMatrix>) bug

2014-04-26  Martin Maechler  <maechler@stat.math.ethz.ch>

	* new rsparsematrix()

2014-03-30  Martin Maechler  <maechler@stat.math.ethz.ch>

	* DESCRIPTION (Version): 1.1-3, released to CRAN

2014-03-12  Martin Maechler  <maechler@stat.math.ethz.ch>

	* R/dgTMatrix.R (image): fix bug in default ylim computation.

2014-01-28  Martin Maechler  <maechler@stat.math.ethz.ch>

	* R/products.R: matrix products overhauled; should work with sparseVectors;
	speedup of crossprod(v, <sparseM>), thanks to nudge by Niels Richard Hansen.
	* man/matrix-products.Rd: all matrix products documented in one file.
	* tests/matprod.R: more extensive testing

2014-01-20  Martin Maechler  <maechler@stat.math.ethz.ch>

	* DESCRIPTION (Version): 1.1-2

	* NAMESPACE: export fast power-user coercion utilities
	.dsy2mat(), .dxC2mat(), .T2Cmat(), ..2dge().

2013-12-23  Martin Maechler  <maechler@stat.math.ethz.ch>

	* R/dgTMatrix.R (image): (xlim, ylim) get a slightly changed
	default, plus  ylim := sort(ylim, "decreasing").
	This is strictly not back-compatible but should never harm.

2013-09-26  Martin Maechler  <maechler@stat.math.ethz.ch>

	* R/spModels.R (fac2sparse, fac2Sparse): newly exported; plus
	'giveCsparse' option.

2013-09-16  Martin Maechler  <maechler@stat.math.ethz.ch>

	* src/scripts/0get-SuiteSparse.sh: new download script, for
	* src/CHOLMOD/*, src/AMD/*, ...: getting SuiteSparse version 4.2.1

	* R/zzz.R (.SuiteSparse_version): new function

2013-09-13  Martin Maechler  <maechler@stat.math.ethz.ch>

	* R/dsCMatrix.R (solve.dsC.*): finally fix the long-lasting
	undetected solve(<dsC>) bug (only in case Cholmod fails) [r2908].

	* DESCRIPTION (Version): 1.0-15, CRAN-released 2013-09-26

2013-09-12  Martin Maechler  <maechler@stat.math.ethz.ch>
