@@ -50,7 +50,7 @@ setMethod("Summary", "dsparseMatrix",
 	  n <- d[1]
 	  clx <- getClassDef(class(x))
 	  isTri <- extends(clx, "triangularMatrix")
-	  if(extends(clx, "TsparseMatrix") && is_duplicatedT(x, di = d))
+	  if(extends(clx, "TsparseMatrix") && anyDuplicatedT(x, di = d))
 	      x <- .Call(Tsparse_to_Csparse, x, isTri)# = as(x, "Csparsematrix")
 	  l.x <- length(x@x)
 	  if(l.x == ne) ## fully non-zero (and "general") - very rare but quick
