@@ -12,9 +12,6 @@
 \alias{coerce,Matrix,TsparseMatrix-method}
 \alias{coerce,matrix,TsparseMatrix-method}
 \alias{coerce,numeric,TsparseMatrix-method}
-% \alias{Ops,TsparseMatrix,TsparseMatrix-method}
-% \alias{Ops,TsparseMatrix,CsparseMatrix-method}
-% \alias{Ops,CsparseMatrix,TsparseMatrix-method}
 %
 % "[" are in ./Xtrct-methods.Rd;  "[<-" in ./Subassign-methods.Rd
 %\alias{solve,...} --> solve-methods.Rd
