@@ -138,7 +138,7 @@ if(isTRUE(try(require(SparseM)))) { # may be there and fail
 	M3 <- as(A.csr,               "Matrix") # dgC
 	M4 <- as(A.csc,               "Matrix") # dgC
 	M5 <- as(as(M, "matrix.coo"), "Matrix") # dgT
-	uniqT <- Matrix:::uniqTsparse
+	uniqT <- uniqTsparse
 	stopifnot(identical4(uniqT(T), uniqT(T.), uniqT(T3), uniqT(M5)),
 		  identical3(M, M3, M4))
 
